--- a/.github/workflows/check_vless.yml
+++ b/.github/workflows/check_vless.yml
@@ -18,6 +18,11 @@ jobs:
         with:
           python-version: '3.11'  # 替换为您需要的 Python 版本
 
+      - name: Create accounts.json from environment variable
+        run: echo "$ACCOUNTS_JSON" > accounts.json
+        env:
+            ACCOUNTS_JSON: ${{ secrets.ACCOUNTS_JSON }}  # 从GitHub Secrets中获取环境变量
+
       - name: 安装依赖
         run: |
           python -m pip install --upgrade pip
